--- a/Fuente/LabSecMobile/app/src/main/res/values/strings.xml
+++ b/Fuente/LabSecMobile/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="state_image">State image</string>
+    <string name="exit">Exit</string>
 </resources>
